manifests/game-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  namespace: crash-course
spec:
  replicas: 1
  selector:
    matchLabels: { app: game-service }
  template:
    metadata:
      labels: { app: game-service }
    spec:
      containers:
      - name: game-service
        image: saiyam911/game-service:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
