manifests/postgress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: crash-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: init-sql
        configMap:
          name: init-sql
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
