manifests/game-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: crash-course
  labels:
    app: game-service # <-- Add this label
    release: prometheus # It's good practice to also add the release label
spec:
  selector: { app: game-service }
  ports:
  - name: http-metrics
    port: 8081
    targetPort: 8081
