manifests/gateway.yaml
# manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: crash-course-gateway
  namespace: kgateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "k8s2025.kubesimplify.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: course-kubesimplify-com-tls
      allowedRoutes:
        namespaces:
          from: All
