manifests/httpreirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-redirect
  namespace: crash-course
spec:
  parentRefs:
  - name: crash-course-gateway
    namespace: kgateway-system
    sectionName: http
  hostnames:
  - course.kubesimplify.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
